# AuraOS

./: .aura_backup.bak  .aura_forager_backup.bak  .aura_hdc_backup.bak  .aura_node_backup.bak  .aura_pfst_backup.bak  .gitignore  AURA_GENESIS_BLOCK.json  AURA_ROUTER.md  AuraOS.tex  DAILY_DIGEST_JUN_6.md  DAILY_DIGEST_JUN_7.md  DAILY_DIGEST_JUN_7_8_FINAL.md  DAILY_DIGEST_JUN_7_BRIEF.md  DAILY_DIGEST_JUN_8.md  DAILY_DIGEST_JUN_8_CORRECTED.md  DAILY_DIGEST_Jun7-8_2026.md  DAILY_DIGEST_Jun7_2026.md  DEEP_AUDIT_REPORT.md  GRAPH_REPORT.md  README.md  USER_GUIDE.md  apply_graft.py  arch_reasoner_accel  arch_reasoner_accel.py  arch_reasoner_accel.rs  arxiv_forager.py  async_palace.py  aura.lexc  aura_ai_router.py  aura_anthropic_router.py  aura_api_rotator.py  aura_arch_reasoner.py  aura_associative_core.py  aura_attention_palace.py  aura_background_auditor.py  aura_benchmark_sandbox.py  aura_cognitive_synthesizer.py  aura_converse.py  aura_coordinated_solver.py  aura_core.py  (+109 more)
.aura/: ARCHITECTURE.md  AURA.md  CONVERSE.md  OUTPUT_FORMATS.md  ROLES.md  SECURITY.md
.mempalace/: aura_thought.txt  lexicon.json  nexus.json  temp_prompt.txt
aura_blockchain/: __init__.py  block.py  consensus.py  demo.py  memory_staking.py  node.py  phasor_ledger.py
aura_exports/: aura_export_default_1780273977.txt
